[package]
name = "weight-aware-bag"
version = "0.1.0"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "weight-aware-bag"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mpu6050 = "0.1.6"
anyhow = "1.0.93"
esp32-nimble = "0.8.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
loadcell = "0.2.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
